--- a/contents/01_Introduction.tex
+++ b/contents/01_Introduction.tex
@@ -3,7 +3,7 @@ In 2019 Oracle released the GraalVM with active development up to present days. 
 Graal.Js is the Truffle implementation of ECMAScript on the GraalVM. ECMAScript, with unofficial name JavaScript, is on spot three on the PYPL popularity index behind Java and Python indicating the programming language's relevance. From this relevance need arises to address the project's relevance. Graal.Js is the interface, on top of Truffle implemented on the GraalVM, between polyglot programs consisting of JavaScript, Java and other languages. This standalone feature lets the interpreter have a stand-out position on all the engines. Coming from other relevant engines like V8 or SpiderMonkey which cannot support polyglot programs GraalVM is on par with their feature support of ECMAScript 6 and newer standards. An important matter for relevancy of an engine is obviously the feature support. With new features being added to the standard these features have to be implemented into the engines which brings us to the new feature to be implemented module blocks.\\
 Module blocks is an ECMAScript proposal by Daniel Ehrenberg and Surma based on inline modules. Inlining modules is a feature which is missing from the current ECMAScript. The absence has resulted into workarounds with various issues. ECMAScript cannot share code between processes thus residing on a single thread. Every module, worker and worklet needs a separate file cluttering project folders. Tasks short of stringification cannot be shared across agents. The multitude of problems cited can be addressed by module blocks. Module blocks is a stage 2 proposal on ECMAScript 262 and is most likely to be implemented in the 2022 version of ECMAScript. Since it has a high relevance for polyglot programs its implementation is key to staying on top of the technology stack which brings us to the purpose of this thesis.\\
 The main objective of this thesis is to implement the new ECMAScript stage 2 proposal module blocks into the Graal.Js engine which is implemented via the Truffle framework. Furthermore testing for this implementation will be conducted. When the general workings are set a code shipping framework and benchmarks will be included.\\
-The thesis is divided into five further chapters. Section two explains the theoretical background of the thesis. In the following chapter three the implementation and the testing is addressed. 
+The thesis is divided into five further chapters. Section two explains the theoretical background of the thesis. In the following chapter three the implementation and the testing is addressed. Afterwards Section four handles benchmarking. The thesis is then rounded up in Section five and six by highlighting future work and a conclusion.
 
 % further notes to think about on thesis introduction
 %Runtime relevancy - to stay relevant new features need to be implemented asap - module blocks\\
