--- a/literature.bib
+++ b/literature.bib
@@ -44,3 +44,22 @@ url = {https://docs.oracle.com/javase/specs/jls/se16/jls16.pdf}
 	location = {Indianapolis, Indiana, USA},
 	series = {Onward! 2013}
 }
+
+@inproceedings{inproceedings,
+	author = {Duboscq, Gilles and Stadler, Lukas and Wuerthinger, Thomas and Simon, Doug and Wimmer, Christian and Mössenböck, Hanspeter},
+	year = {2013},
+	month = {02},
+	pages = {},
+	title = {Graal IR: An Extensible Declarative Intermediate Representation}
+}
+
+@inproceedings{ChambDeopt,
+	author = {Hölzle, Urs and Chambers, Craig and Ungar, David},
+	year = {1992},
+	month = {07},
+	pages = {32-43},
+	title = {Debugging Optimized Code with Dynamic Deoptimization.},
+	volume = {27},
+	journal = {Sigplan Notices - SIGPLAN},
+	doi = {10.1145/143103.143114}
+}
