graal and truffle
first draft graal finished with figure but without figure's explanation
first draft truffle added but unfinished

--- a/contents/02_Background.tex
+++ b/contents/02_Background.tex
@@ -42,10 +42,20 @@ A part of the byte code chosen for JIT-compilation is compiled to machine code a
 The last component left out so far is the garbage collector (GC). It takes care of objects without references resulting them to be unreachable by application code. Such an object will be removed by GC and memory will be freed up. The GC is part of inner workings and fully functions without user interaction but the programmer can make a not guaranteed call for the GC.\cite{Lindholm}\\
 This section explained the JVM ecosystem. It is split up between an AOT-compiler that creates Java bytecode out of Java source code. From there on the JVM executes the bytecode. Generally speaking the JVM consists of three areas, the class loader subsystem, taking care of loading, linking and initialization, the runtime data area and the execution engine, consisting of the interpreter, the JIT compiler and garbage collector. Aditionally to ease the programmer's work the JRE or JDK come with an API. What hasn't been discussed so far are technologies for making Java execute faster. These technologies are a core feature of GraalVM which is the topic of the next section.
 \section{GraalVM}
-The GraalVM complete ecosystem is comprised of multiple technologies. In the runtime environment the GraalVM reuses components from the HotSpot VM like the class loader subsystem, the runtime data area and parts of the execution engine, the interpreter and the garbage collector, but replaces the HotSpot JIT compiler with the Graal compiler. Since the Graal compiler functions differently it also implements an interface between the regular HotSpot components and the Graal compiler. Outside of the VM it also has the Truffle framework for different language implementations. Already implemented languages are JavaScript, Ruby, R, python and LLVM-based languages like C, C++ and Rust. Thus the feature is able to end the segregation of programming languages. Another feature is its ability to be embedded in combination with OpenJDK, node.js or inside Oracle Database, while also being able to be run standalone.
+\begin{figure}
+	\includegraphics[scale=0.2]{../figures/GraalVM.png}
+	\caption{The Graal Virtual Machine simplified structure}
+	\label{fig:graalvm}
+\end{figure}
+As seen in the last two sections building a virtual machine for executing programming languages is a non-trivial task needing a lot of effort. A lot of this effort has to be redone for different programming languages. The core idea of Graal is to reduce this effort via a layered structure where each language implementation is in essence an abstract syntax tree (AST) interpreter via the Truffle API. All low level implementions like JIT compiling, data areas, memory management, optimizations and the like are reused by each language implementation connecting to the GraalVM or any JVM via Truffle. Considering performance these implementations are best run on top of GraalVM. Reasons for that are explained in the next section.\\
+The GraalVM complete ecosystem is comprised of multiple technologies. In the runtime environment the GraalVM reuses most components from the HotSpot VM like the class loader subsystem, the runtime data area and parts of the execution engine, in particular the interpreter and the garbage collector, but replaces the HotSpot JIT compiler with the Graal compiler. Since the Graal compiler functions differently it also implements an interface between the regular HotSpot components and the Graal compiler. Outside of the VM it also has the Truffle framework for different language implementations. Already implemented languages are JavaScript, Ruby, R, python and LLVM-based languages like C, C++ and Rust. Thus the feature is able to end the segregation of programming languages. Another feature is its ability to be embedded in combination with OpenJDK, node.js or inside Oracle Database, while also being able to be run standalone.
 \subsection{Graal Compiler}
-The Graal Compiler replaces the JIT compiler in a JRE. Other as the regular java JIT compiler it doesn't translate java bytecode directly to machine code but to the Graal IR \cite{inproceedings}. The Graal IR is a graph-based high-level intermediate representation. This intermediate representation is key to Graal's aggressive optimization techniques. Aggressive optimization also means the compilation is prone to failures which are caught by so called guards. When a guard fails execution is transferred back to interpretation. This mechanism is called deoptimization. \cite{ChambDeopt}
+The Graal Compiler replaces the JIT compiler in a JRE. Other as the regular java JIT compiler it doesn't translate java bytecode directly to machine code but to the Graal IR. \cite{inproceedings} The Graal IR is a graph-based high-level intermediate representation. This intermediate representation is key to Graal's aggressive optimization techniques based on optimistic assumptions such as specific types and branch prediction. Aggressive optimization also means the compilation is prone to failures which are caught by so called guards. When a guard fails execution is transferred back to interpretation. This mechanism is called deoptimization. \cite{ChambDeopt} Compiled code gets saved as a VMs internal data structure and subsequent calls to the particular part of code get always directly executed in machine code omitting the unnecessary step of interpreting.\\
+Another component the GraalVM project substitutes is the Java Native Interface \cite{Lindholm}. It is exchanged with the Graal Native Function Interface (GNFI). \cite{grimmerNative} It allows for efficient native function calls within Java code.
 \subsection{Truffle API}
+The Truffle language implementation framework enables programmers to write an AST interpreter in Java for any programming language. This interpreter works by modelling language structures as nodes building the abstract syntax tree. Evaluation of the tree works by invoking the execute method which is within every type of Node. These different Node types all extend the class Node forcing them to have an execute method implementing their respective semantics. The whole tree gets then recursively evaluated by the recursive execute method calls.\\
+Optimizations on AST level mostly work with a speculative specialization technique. The Nodes rewrite themselves into specialized variants at run time where profiling information is available. \cite{wuerthSelf} As we have discussed earlier in the Graal compiler speculative optimizations, like a specialization, are prone to failure. A failed specialized Node rewrites itself back into a more generic version.\\
+ 
 
 \section{Graal.Js}
 
