--- a/literature.bib
+++ b/literature.bib
@@ -63,3 +63,24 @@ url = {https://docs.oracle.com/javase/specs/jls/se16/jls16.pdf}
 	journal = {Sigplan Notices - SIGPLAN},
 	doi = {10.1145/143103.143114}
 }
+
+@inproceedings{grimmerNative,
+	author = {Grimmer, Matthias and Rigger, Manuel and Stadler, Lukas and Schatz, Roland and Mössenböck, Hanspeter},
+	year = {2013},
+	month = {09},
+	pages = {35-44},
+	title = {An efficient native function interface for Java},
+	journal = {ACM International Conference Proceeding Series},
+	doi = {10.1145/2500828.2500832}
+}
+
+@article{wuerthSelf,
+	author = {Wuerthinger, Thomas and Wöß, Andreas and Stadler, Lukas and Duboscq, Gilles and Simon, Doug and Wimmer, Christian},
+	year = {2013},
+	month = {01},
+	pages = {73-82},
+	title = {Self-optimizing AST interpreters},
+	volume = {48},
+	journal = {ACM SIGPLAN Notices},
+	doi = {10.1145/2480360.2384587}
+}
